inclui fotos, melhora timeline, melhora layout

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,7 @@
 @font-face {
   font-family: "Montserrat";
   src: url("fonts/Montserrat-Black.eot");
-  src: local("☺"), url("fonts/Montserrat-Black.woff") format("woff"),
-    url("fonts/Montserrat-Black.ttf") format("truetype"),
-    url("fonts/Montserrat-Black.svg") format("svg");
+  src: local("☺"), url("fonts/Montserrat-Black.woff") format("woff"), url("fonts/Montserrat-Black.ttf") format("truetype"), url("fonts/Montserrat-Black.svg") format("svg");
   font-weight: 900;
   font-style: normal;
 }
@@ -11,9 +9,7 @@
 @font-face {
   font-family: "Montserrat";
   src: url("fonts/Montserrat-Bold.eot");
-  src: local("☺"), url("fonts/Montserrat-Bold.woff") format("woff"),
-    url("fonts/Montserrat-Bold.ttf") format("truetype"),
-    url("fonts/Montserrat-Bold.svg") format("svg");
+  src: local("☺"), url("fonts/Montserrat-Bold.woff") format("woff"), url("fonts/Montserrat-Bold.ttf") format("truetype"), url("fonts/Montserrat-Bold.svg") format("svg");
   font-weight: 700;
   font-style: normal;
 }
@@ -21,9 +17,7 @@
 @font-face {
   font-family: "Montserrat";
   src: url("fonts/Montserrat-Regular.eot");
-  src: local("☺"), url("fonts/Montserrat-Regular.woff") format("woff"),
-    url("fonts/Montserrat-Regular.ttf") format("truetype"),
-    url("fonts/Montserrat-Regular.svg") format("svg");
+  src: local("☺"), url("fonts/Montserrat-Regular.woff") format("woff"), url("fonts/Montserrat-Regular.ttf") format("truetype"), url("fonts/Montserrat-Regular.svg") format("svg");
   font-weight: 400;
   font-style: normal;
 }
@@ -31,11 +25,14 @@
 @font-face {
   font-family: "Montserrat";
   src: url("fonts/Montserrat-Light.eot");
-  src: local("☺"), url("fonts/Montserrat-Light.woff") format("woff"),
-    url("fonts/Montserrat-Light.ttf") format("truetype"),
-    url("fonts/Montserrat-Light.svg") format("svg");
+  src: local("☺"), url("fonts/Montserrat-Light.woff") format("woff"), url("fonts/Montserrat-Light.ttf") format("truetype"), url("fonts/Montserrat-Light.svg") format("svg");
   font-weight: 300;
   font-style: normal;
+}
+
+@font-face {
+  font-family: "Oswald";
+  src: url("fonts/Montserrat-Regular.ttf") format("truetype");
 }
 
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
@@ -50,26 +47,11 @@ body {
   margin: 0;
 }
 
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section,
-summary {
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
 
-audio,
-canvas,
-progress,
-video {
+audio, canvas, progress, video {
   display: inline-block;
   vertical-align: baseline;
 }
@@ -79,8 +61,7 @@ audio:not([controls]) {
   height: 0;
 }
 
-[hidden],
-template {
+[hidden], template {
   display: none;
 }
 
@@ -88,8 +69,7 @@ a {
   background-color: transparent;
 }
 
-a:active,
-a:hover {
+a:active, a:hover {
   outline: 0;
 }
 
@@ -97,12 +77,11 @@ abbr[title] {
   border-bottom: 1px dotted;
 }
 
-b,
-strong {
+b, strong {
   font-weight: bold;
 }
 
-dfn {
+.italic {
   font-style: italic;
 }
 
@@ -120,8 +99,7 @@ small {
   font-size: 80%;
 }
 
-sub,
-sup {
+sub, sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
@@ -157,19 +135,12 @@ pre {
   overflow: auto;
 }
 
-code,
-kbd,
-pre,
-samp {
+code, kbd, pre, samp {
   font-family: monospace, monospace;
   font-size: 1em;
 }
 
-button,
-input,
-optgroup,
-select,
-textarea {
+button, input, optgroup, select, textarea {
   color: inherit;
   font: inherit;
   margin: 0;
@@ -179,26 +150,20 @@ button {
   overflow: visible;
 }
 
-button,
-select {
+button, select {
   text-transform: none;
 }
 
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
+button, html input[type="button"], input[type="reset"], input[type="submit"] {
   -webkit-appearance: button;
   cursor: pointer;
 }
 
-button[disabled],
-html input[disabled] {
+button[disabled], html input[disabled] {
   cursor: default;
 }
 
-button::-moz-focus-inner,
-input::-moz-focus-inner {
+button::-moz-focus-inner, input::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
@@ -207,14 +172,12 @@ input {
   line-height: normal;
 }
 
-input[type="checkbox"],
-input[type="radio"] {
+input[type="checkbox"], input[type="radio"] {
   box-sizing: border-box;
   padding: 0;
 }
 
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
+input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -223,8 +186,7 @@ input[type="search"] {
   box-sizing: content-box;
 }
 
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
+input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -252,8 +214,7 @@ table {
   border-spacing: 0;
 }
 
-td,
-th {
+td, th {
   padding: 0;
 }
 
@@ -289,7 +250,7 @@ body {
   background-color: #0c0c0c;
   font-size: 14px;
   line-height: 1.6;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Oswald", "Montserrat", sans-serif;
   color: #fff;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
@@ -552,9 +513,7 @@ body {
   cursor: pointer;
 }
 
-.header--nav-toggle span,
-.header--nav-toggle::before,
-.header--nav-toggle::after {
+.header--nav-toggle span, .header--nav-toggle::before, .header--nav-toggle::after {
   content: "";
   position: relative;
   width: 16px;
@@ -584,7 +543,7 @@ body {
   color: #fff;
   font-weight: 700;
   text-transform: uppercase;
-  background-color: #ff6347;
+  background-color: #0F33FF;
   border: none;
   opacity: 0;
   visibility: hidden;
@@ -631,7 +590,7 @@ body {
   z-index: 10;
 }
 
-.side-nav > li {
+.side-nav>li {
   position: relative;
   top: -5px;
   color: #fff;
@@ -639,7 +598,7 @@ body {
   cursor: pointer;
 }
 
-.side-nav > li span {
+.side-nav>li span {
   position: relative;
   top: 3px;
   left: 10px;
@@ -650,7 +609,7 @@ body {
   visibility: hidden;
 }
 
-.side-nav > li::before {
+.side-nav>li::before {
   position: absolute;
   top: 3px;
   left: 10px;
@@ -684,7 +643,7 @@ body {
 }
 
 .side-nav li.is-active {
-  color: #ff6347;
+  color: #0F33FF;
   -webkit-transition: color 0.4s ease-in-out;
   transition: color 0.4s ease-in-out;
 }
@@ -750,7 +709,7 @@ body {
   left: 0;
   width: 30px;
   height: 4px;
-  background-color: #ff6347;
+  background-color: #0F33FF;
 }
 
 .intro--banner h1 {
@@ -776,7 +735,7 @@ body {
   left: 0;
   right: 0;
   height: 100%;
-  background-color: #ff6347;
+  background-color: #0F33FF;
   z-index: -1;
   -webkit-transition: left 0.2s ease-in-out;
   transition: left 0.2s ease-in-out;
@@ -815,7 +774,7 @@ body {
   list-style: none;
 }
 
-.intro--options > span {
+.intro--options>span {
   max-width: 250px;
   text-decoration: none;
   color: #282828;
@@ -824,7 +783,7 @@ body {
   margin-right: 20px;
 }
 
-.intro--options > span:hover {
+.intro--options>span:hover {
   color: #fff;
 }
 
@@ -846,10 +805,10 @@ body {
   .intro--banner img {
     width: 430px;
   }
-  .intro--options > a {
+  .intro--options>a {
     margin-right: 30px;
   }
-  .intro--options > a:last-child {
+  .intro--options>a:last-child {
     margin-right: 0;
   }
 }
@@ -867,12 +826,12 @@ body {
   .intro--options {
     display: block;
   }
-  .intro--options > a {
+  .intro--options>a {
     display: block;
     max-width: 100%;
     margin: 0 0 30px 0;
   }
-  .intro--options > a:last-child {
+  .intro--options>a:last-child {
     margin-bottom: 0;
   }
 }
@@ -893,8 +852,7 @@ body {
   .intro--banner {
     height: auto;
   }
-  .intro--banner::before,
-  .intro--banner::after {
+  .intro--banner::before, .intro--banner::after {
     display: none;
   }
   .intro--banner h1 {
@@ -1037,10 +995,8 @@ body {
   height: 300px;
 }
 
-.work--lockup .slider--next,
-.work--lockup .slider--prev {
+.slider--next, .slider--prev {
   position: absolute;
-  top: 160px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1060,8 +1016,20 @@ body {
   cursor: pointer;
 }
 
-.work--lockup .slider--next svg,
-.work--lockup .slider--prev svg {
+.slider--next:hover, .slider--prev:hover {
+  background-color: #383838;
+}
+
+#next .slider--next svg, #prev .slider--prev svg {
+  width: 20px;
+  fill: #fff;
+}
+
+.work--lockup .slider--next, .work--lockup .slider--prev {
+  top: 160px;
+}
+
+.work--lockup .slider--next svg, .work--lockup .slider--prev svg {
   width: 20px;
   fill: #fff;
 }
@@ -1083,8 +1051,7 @@ body {
     width: 240px;
     height: 240px;
   }
-  .work--lockup .slider--next,
-  .work--lockup .slider--prev {
+  .work--lockup .slider--next, .work--lockup .slider--prev {
     top: 130px;
   }
 }
@@ -1101,8 +1068,7 @@ body {
     width: 190px;
     height: 190px;
   }
-  .work--lockup .slider--next,
-  .work--lockup .slider--prev {
+  .work--lockup .slider--next, .work--lockup .slider--prev {
     top: 105px;
   }
 }
@@ -1111,8 +1077,7 @@ body {
   .work--lockup .slider {
     width: auto;
   }
-  .work--lockup .slider--item-left,
-  .work--lockup .slider--item-right {
+  .work--lockup .slider--item-left, .work--lockup .slider--item-right {
     display: none;
   }
 }
@@ -1136,7 +1101,7 @@ body {
   -ms-flex-pack: center;
   justify-content: center;
   margin: 0 auto;
-  padding-top: 10%;
+  padding-top: 5%;
 }
 
 @media (max-width: 1180px) {
@@ -1178,7 +1143,7 @@ body {
   left: 200px;
   -webkit-transform: rotate(-25deg);
   transform: rotate(-25deg);
-  border: 5px solid #ff6347;
+  border: 5px solid #0F33FF;
   border-right-color: transparent;
   border-bottom-color: transparent;
 }
@@ -1192,7 +1157,7 @@ body {
   transform: rotate(45deg);
   width: 10px;
   height: 10px;
-  background-color: #ff6347;
+  background-color: #0F33FF;
 }
 
 .about--banner h2 {
@@ -1211,7 +1176,7 @@ body {
   left: 268px;
   width: 30px;
   height: 30px;
-  background-color: #ff6347;
+  background-color: #0F33FF;
   border-radius: 50%;
 }
 
@@ -1222,7 +1187,7 @@ body {
   left: 255px;
   width: 10px;
   height: 10px;
-  background-color: #ff6347;
+  background-color: #0F33FF;
 }
 
 .about--banner a {
@@ -1268,31 +1233,31 @@ body {
   list-style: none;
 }
 
-.about--options > a {
+.about--options>a {
   position: relative;
   width: 150px;
   height: 75px;
   text-decoration: none;
   color: #fff;
-  border: 10px solid #ff6347;
+  border: 10px solid #0F33FF;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-.about--options > a:nth-child(1) {
+.about--options>a:nth-child(1) {
   background-image: url("../img/about-winners.jpg");
 }
 
-.about--options > a:nth-child(2) {
+.about--options>a:nth-child(2) {
   background-image: url("../img/about-philosophy.jpg");
 }
 
-.about--options > a:nth-child(3) {
+.about--options>a:nth-child(3) {
   background-image: url("../img/about-history.jpg");
 }
 
-.about--options > a:hover h3 {
+.about--options>a:hover h3 {
   bottom: -50px;
 }
 
@@ -1371,7 +1336,6 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../img/contact-visual.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1419,8 +1383,7 @@ body {
   box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.75);
 }
 
-.contact--lockup .modal--information p,
-.contact--lockup .modal--information a {
+.contact--lockup .modal--information p, .contact--lockup .modal--information a {
   display: block;
   margin: 14px 0;
   text-decoration: none;
@@ -1438,7 +1401,7 @@ body {
   list-style: none;
 }
 
-.contact--lockup .modal--options > li {
+.contact--lockup .modal--options>li {
   width: 130px;
   margin: 0 auto 25px auto;
 }
@@ -1453,7 +1416,7 @@ body {
 
 .contact--lockup .modal--options li:nth-child(3) {
   margin-bottom: 0;
-  background-color: #ff6347;
+  background-color: #0F33FF;
   text-transform: uppercase;
 }
 
@@ -1525,7 +1488,7 @@ body {
   font-size: 16px;
   font-weight: 700;
   text-transform: uppercase;
-  background-color: #ff6347;
+  background-color: #0F33FF;
   border: none;
   border-radius: 0;
 }
@@ -1588,8 +1551,7 @@ body {
   text-align: center;
   border: 2px solid #fff;
   cursor: pointer;
-  -webkit-transition: background-color 0.2s ease-in-out,
-    border-color 0.2s ease-in-out;
+  -webkit-transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
   transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 }
 
@@ -1606,12 +1568,12 @@ body {
   display: none;
 }
 
-.work-request--options input[type="checkbox"]:checked + label {
-  background-color: #ff6347;
-  border-color: #ff6347;
+.work-request--options input[type="checkbox"]:checked+label {
+  background-color: #0F33FF;
+  border-color: #0F33FF;
 }
 
-.work-request--options input[type="checkbox"]:checked + label svg {
+.work-request--options input[type="checkbox"]:checked+label svg {
   width: 15px;
 }
 
@@ -1628,8 +1590,7 @@ body {
   margin-bottom: 60px;
 }
 
-.work-request--information .information-name,
-.work-request--information .information-email {
+.work-request--information .information-name, .work-request--information .information-email {
   position: relative;
   width: 45%;
   height: 50px;
@@ -1637,8 +1598,7 @@ body {
   font-weight: 300;
 }
 
-.work-request--information input[type="text"],
-.work-request--information input[type="email"] {
+.work-request--information input[type="text"], .work-request--information input[type="email"] {
   width: 100%;
   padding: 0 0 5px 0;
   background-color: transparent;
@@ -1647,8 +1607,7 @@ body {
   border-radius: 0;
 }
 
-.work-request--information input[type="text"]:focus,
-.work-request--information input[type="email"]:focus {
+.work-request--information input[type="text"]:focus, .work-request--information input[type="email"]:focus {
   outline: none;
   background-color: #0c0c0c;
 }
@@ -1662,8 +1621,7 @@ body {
   transition: top 0.2s ease-in-out, font-size 0.2s ease-in-out;
 }
 
-.work-request--information input:focus + label,
-.work-request--information input.has-value + label {
+.work-request--information input:focus+label, .work-request--information input.has-value+label {
   top: -15px;
   font-size: 14px;
 }
@@ -1679,8 +1637,7 @@ body {
     -ms-flex-pack: distribute;
     justify-content: space-around;
   }
-  .work-request--options .options-a,
-  .work-request--options .options-b {
+  .work-request--options .options-a, .work-request--options .options-b {
     display: block;
     width: auto;
   }
@@ -1707,14 +1664,13 @@ body {
     margin-bottom: 15px;
     font-size: 14px;
   }
-  .work-request--options input[type="checkbox"]:checked + label svg {
+  .work-request--options input[type="checkbox"]:checked+label svg {
     width: 12px;
   }
   .work-request--information {
     margin-bottom: 30px;
   }
-  .work-request--information .information-name,
-  .work-request--information .information-email {
+  .work-request--information .information-name, .work-request--information .information-email {
     height: 40px;
     font-size: 24px;
   }
@@ -1738,7 +1694,7 @@ body {
   -webkit-transform: translateZ(0) translateX(0) rotateY(0deg);
   transform: translateZ(0) translateX(0) rotateY(0deg);
   min-height: 100%;
-  outline: 30px solid #ff6347;
+  outline: 30px solid #0F33FF;
   -webkit-transition: -webkit-transform 0.4s;
   transition: -webkit-transform 0.4s;
   transition: transform 0.4s;
@@ -1766,7 +1722,7 @@ body {
 .effect-rotate-left--animate .container {
   -webkit-transform: translateZ(-1800px) translateX(-50%) rotateY(45deg);
   transform: translateZ(-1800px) translateX(-50%) rotateY(45deg);
-  outline: 30px solid #ff6347;
+  outline: 30px solid #0F33FF;
 }
 
 .outer-nav {
@@ -1805,7 +1761,7 @@ body {
   display: block;
 }
 
-.outer-nav > li {
+.outer-nav>li {
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   -webkit-transform: translateX(350px) translateZ(-1000px);
@@ -1820,7 +1776,7 @@ body {
   transition: transform 0.2s, opacity 0.2s, -webkit-transform 0.2s;
 }
 
-.outer-nav > li.is-vis {
+.outer-nav>li.is-vis {
   -webkit-transform: translateX(0) translateZ(0);
   transform: translateX(0) translateZ(0);
   opacity: 1;
@@ -1830,25 +1786,25 @@ body {
   transition: transform 0.4s, opacity 0.4s, -webkit-transform 0.4s;
 }
 
-.outer-nav > li::before {
+.outer-nav>li::before {
   content: "";
   position: absolute;
-  top: 50%;
+  top: 70%;
   left: 50%;
   -webkit-transform: translate(-50%, 200%);
   transform: translate(-50%, 200%);
   width: 110%;
-  height: 15px;
+  height: 10px;
   opacity: 0;
-  background-color: #ff6347;
+  background-color: #0F33FF;
 }
 
-.outer-nav > li.is-active::before {
+.outer-nav>li.is-active::before {
   opacity: 1;
 }
 
 @media (max-width: 767px) {
-  .outer-nav > li {
+  .outer-nav>li {
     font-size: 44px;
   }
 }
